added the reviews routes and updated the review controller and swagger doc and .http file for 'tests'
