# app/Http/Controllers/ReviewController.php
@@ -3,108 +3,240 @@
 namespace App\Http\Controllers;
 
 use App\Models\Review;
+use Exception;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\Request;
 use Illuminate\Validation\ValidationException;
 
 
 class ReviewController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     */
-    public function index()
-    {
-        $reviews = Review::all();
-        return response()->json([$reviews]);
 
+    /**
+     * @OA\Get(
+     *     path="/api/review/{id}",
+     *     summary="Get one review by id",
+     *     tags={"Reviews"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="The ID of the review",
+     *          required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
+     *     @OA\Response(response=200, description="Successful operation"),
+     *     @OA\Response(response=404, description="Review not found"),
+     *     @OA\Response(response=500, description="An error occurred")
+     * )
+     */
+    public function getSingleReview(string $id)
+    {
+        try {
+            $review = Review::findOrFail($id);
+            return response()->json($review);
+        } catch (ModelNotFoundException $e) {
+            return response()->json([
+                'error' => 'review not found',
+                'message' => $e->getMessage(),
+            ], 404);
+        } catch (Exception $e) {
+            return response()->json([
+                'error' => 'An error occurred while fetching the review',
+                'message' => $e->getMessage()
+            ], 500);
+        }
+    }
+
+
+    /**
+     * @OA\Get(
+     *     path="/api/review",
+     *     summary="Get all reviews",
+     *     tags={"Reviews"},
+     *     @OA\Response(response=200, description="Successful operation"),
+     *     @OA\Response(response=500, description="An error occurred")
+     * )
+     */
+    public function getAllReviews()
+    {
+        try {
+            $reviews = Review::all();
+            return response()->json($reviews);
+        } catch (Exception $e) {
+            return response()->json([
+                'error' => 'An error occurred while fetching the reviews',
+                'message' => $e->getMessage()
+            ], 500);
+        }
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/api/review",
+     *     summary="Add a review",
+     *     tags={"Reviews"},
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  required={"rate", "review_content", "user_id"},
+     *                  @OA\Property(
+     *                      property="rate",
+     *                      type="number",
+     *                      description="The rating of the review, between 1 and 5"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="review_content",
+     *                      type="string",
+     *                      description="The content of the review"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="user_id",
+     *                      type="integer",
+     *                      description="The ID of the user who created the review"
+     *                  )
+     *              )
+     *          )
+     *     ),
+     *     @OA\Response(response=201, description="Successful operation"),
+     *     @OA\Response(response=422, description="Validation failed"),
+     *     @OA\Response(response=500, description="An error occurred")
+     * )
      */
-    public function store(Request $request)
+    public function addReview(Request $request)
     {
         try {
             $validatedData = $request->validate([
-                'rate' => 'bail|required|integer',
+                'rate' => 'bail|required|numeric|min:1|max:5',
                 'review_content' => 'bail|required|string',
-                'user_id' => 'bail|required|integer',
+                'user_id' => 'bail|required|numeric',
             ]);
-
-
             $review = new Review($validatedData);
             $review->save();
 
             return response()->json($review, 201);
-        } catch (ValidationException $exception) {
+        } catch (ValidationException $e) {
             return response()->json([
-                'error' => $exception->getMessage(),
-                'errors' => $exception->errors(),
+                'error' => 'Validation failed',
+                'errors' => $e->errors(),
                 ], 422);
-        } catch (\Exception $exception) {
+        } catch (Exception $e) {
             return response()->json([
-                'error' => 'Une erreur inattendue est survenue.',
-                'details'=>    $exception->getMessage(),
+                'error' => 'An error occurred while adding the review',
+                'message'=>    $e->getMessage(),
             ], 500);
         }
     }
 
-    /**
-     * Display the specified resource.
-     */
-    public function show(string $id)
-    {
-        $reviews = Review :: findOrFail($id);
 
-        if (!$reviews) {
-            return response()->json(['error' => 'review non trouvée'], 404);
-        }
-        return response()->json([$reviews]);
-    }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Post(
+     *     path="/api/review/{id}",
+     *     summary="Update a review by id",
+     *     tags={"Reviews"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of the review",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *          required=true,
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *              @OA\Schema(
+     *                  required={"rate", "review_content", "user_id"},
+     *                  @OA\Property(
+     *                      property="rate",
+     *                      type="number",
+     *                      description="The rating of the review, between 1 and 5"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="review_content",
+     *                      type="string",
+     *                      description="The content of the review"
+     *                  ),
+     *                  @OA\Property(
+     *                      property="user_id",
+     *                      type="integer",
+     *                      description="The ID of the user who created the review"
+     *                  )
+     *              )
+     *          )
+     *     ),
+     *     @OA\Response(response=200, description="Successful operation"),
+     *     @OA\Response(response=404, description="Review not found"),
+     *     @OA\Response(response=422, description="Validation failed"),
+     *     @OA\Response(response=500, description="An error occurred")
+     * )
      */
-    public function update(Request $request, string $id)
+    public function updateReview(Request $request, string $id)
     {
         try{
             $validatedData = $request->validate([
-                'rate' => 'bail|required|integer',
+                'rate' => 'bail|required|numeric|min:1|max:5',
                 'review_content' => 'bail|required|string',
-                'user_id' => 'bail|required|integer',
+                'user_id' => 'bail|required|numeric',
             ]);
-            $reviews = Review :: findOrFail($id);
+            $review = Review::findOrFail($id);
+            $review->update($validatedData);
 
-            if (!$reviews) {
-                return response()->json(['error' => 'review non trouvée'], 404);
-            }
-            $reviews->update($validatedData);
-
-            return response()->json($reviews, 201);
-        } catch (ValidationException $exception){
+            return response()->json($review);
+        } catch (ModelNotFoundException $e) {
             return response()->json([
-                'error' => $exception->getMessage(),
-                'errors' => $exception->errors(),
+                'error' => 'Review not found',
+                'message' => $e->getMessage()
+            ], 404);
+        } catch (ValidationException $e){
+            return response()->json([
+                'error' => 'Validation failed',
+                'errors' => $e->errors(),
             ], 422);
-        } catch (\Exception $exception){
+        } catch (Exception $e){
             return response()->json([
-                'error' => 'Une erreur inattendue est survenue.',
-                'details'=>    $exception->getMessage(),
+                'error' => 'An error occurred while updating the Review',
+                'details'=>    $e->getMessage(),
             ], 500);
         }
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="/api/review/{id}",
+     *     summary="Delete a review by id",
+     *     tags={"Reviews"},
+     *      @OA\Parameter(
+     *          name="id",
+     *          in="path",
+     *          description="The ID of the review",
+     *          required=true,
+     *          @OA\Schema(type="integer")
+     *      ),
+     *     @OA\Response(response=200, description="Successful operation"),
+     *     @OA\Response(response=404, description="Review not found"),
+     *     @OA\Response(response=500, description="An error occurred")
+     * )
      */
-    public function destroy(string $id)
+    public function deleteReview(string $id)
     {
-        $reviews = Review ::findOrFail($id);
-        if (!$reviews) {
-            return response()->json(['error' => 'review non trouvée']);
-        }
-        $reviews->delete();
+        try {
+            $review = Review ::findOrFail($id);
+            $review->delete();
 
-        return response()->json(['message' => 'review supprimée avec succès']);
+            return response()->json(['message' => 'review deleted successfully']);
+        } catch (ModelNotFoundException $e) {
+            return response()->json([
+                'error' => 'Review not found',
+                'message' => $e->getMessage()
+            ], 404);
+        } catch (Exception $e) {
+            return response()->json([
+                'error' => 'An error occurred while deleting the review',
+                'message' => $e->getMessage()
+            ], 500);
+        }
     }
 }
